# llm-join

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-23-llm-join.md
docs/superpowers/specs/: 2026-05-23-llm-join-design.md
examples/: fast_async_join.py
llm_join/: __init__.py  bm25.py  checkpoint.py  config.py  dry_run.py  hybrid.py  join.py  merger.py  prompts.py  retriever.py  scorer.py  stats.py
notebooks/: test_llm_join.ipynb
tests/: test_checkpoint.py  test_concurrency.py  test_config.py  test_dry_run.py  test_join.py  test_merger.py  test_parameters.py  test_prompts.py  test_retrieval_default.py  test_retriever.py  test_scorer.py  test_stats_verbose.py
