[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-join"
version = "0.1.0"
description = "Fuzzy join DataFrames using LLM scoring and embedding retrieval"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["fuzzy-join", "llm", "entity-resolution", "pandas", "nlp"]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "faiss-cpu>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]
sentence-transformers = ["sentence-transformers>=2.2"]

[tool.hatch.build.targets.wheel]
packages = ["llm_join"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    "tests/",
    "docs/",
    "*.pyc",
    "__pycache__/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
