[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-join"
version = "0.2.6"
description = "Fuzzy join DataFrames using LLM scoring and embedding retrieval"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["fuzzy-join", "llm", "entity-resolution", "pandas", "nlp"]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23,<2",
    "faiss-cpu>=1.8,<1.14",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.2"]

[tool.hatch.build.targets.wheel]
packages = ["llm_join"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    "tests/",
    "docs/",
    "*.pyc",
    "__pycache__/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
